-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.14.0
-
None
-
RHEL 8.2
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/5690066f-e39c-4964-86b6-ceb2f961126c
test_90 failed with the following error:
CMD: trevis-66vm4 /usr/sbin/lctl get_param -n mdt.lustre-MDT0000.hsm.actions | egrep 'WAITING|STARTED' pdsh@trevis-66vm1: trevis-66vm4: ssh exited with exit code 1 CMD: trevis-66vm4 /usr/sbin/lctl get_param -n mdt.lustre-MDT0000.hsm.actions | egrep 'WAITING|STARTED' pdsh@trevis-66vm1: trevis-66vm4: ssh exited with exit code 1 Cannot send HSM request (use of /mnt/lustre/d90.sanity-hsm/f90.sanity-hsm.1): Operation not permitted sanity-hsm test_90: @@@@@@ FAIL: cannot release a file list
https://testing.whamcloud.com/test_sets/6badc2b6-c8a6-40db-a740-205913d2f371
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-hsm test_90 - cannot release a file list
- is duplicated by
-
LU-13985 seq_file next function must change *pos
-
- Resolved
-
-
LU-14086 sanity-hsm test 260c fails with 'request on 0x200001b71:0x2b1:0x0 is not SUCCEED on mds1'
-
- Resolved
-
-
LU-13544 sanity-hsm test_104: Data field in records is () and not ([434541])
-
- Closed
-
-
LU-13545 sanity-hsm test_260c: FAIL: request on 0x200000404:0x2bb:0x0 is not SUCCEED on mds1
-
- Closed
-